# mcp-server

./: .dockerignore  .gitignore  ALL_CURL_COMMANDS.sh  ALL_CURL_COMMANDS_COPY_PASTE.md  CLOUD_RUN_DEPLOYMENT.md  COMPLETE_CURL_COMMANDS.md  CURL_COMMANDS.md  DEBUG_AUTH.md  DIAGNOSE_WALLET.md  Dockerfile  FIX_INVALID_ADDRESS.md  LICENSE  MIGRATION_TO_FASTMCP.md  QUICK_TEST.md  README.md  RELEASE.md  SETUP_AUTH.md  TESTING.md  TEST_ALL_TOOLS.sh  TROUBLESHOOTING.md  alembic.ini  cloudbuild.yaml  create_secret.py  deploy-first-time.sh  deploy.sh  omniagentpay-0.0.1-py3-none-any.whl  pyproject.toml  requirements.txt  setup_auth_token.sh  start.py  start.sh  test_curl_commands.sh  test_fastmcp.py
alembic_migrations/: env.py
app/: main.py
app/core/: config.py  lifecycle.py  logging.py  security.py
app/db/: base.py  ledger.py  session.py
app/ledger/: models.py  service.py
app/mcp/: auth.py  fastmcp_server.py  handlers.py  registry.py  router.py  schemas.py  tools.py
app/payments/: guards.py  interfaces.py  omni_client.py  providers.py  service.py
app/utils/: exceptions.py
app/wallets/: models.py  service.py
app/webhooks/: circle.py
omniagentpay-0.0.1/: PKG-INFO
tests/: test_mcp.py  test_payment_client.py  test_router.py  test_tools.py
